fix: fixed layout issue on 320 px

--- a/task3.1/ssr-task3/components/Terms/Terms.module.scss
+++ b/task3.1/ssr-task3/components/Terms/Terms.module.scss
@@ -125,7 +125,7 @@
     }
     .heading3desktop {
       font-size: 22px;
-      line-height: 29px;
+      line-height: 28px;
       letter-spacing: -0.17px;
     }
     .termsContainer ul .lineHeight {
@@ -133,9 +133,9 @@
     }
     .heading4desktop {
       font-size: 18px;
-      line-height: 17px;
+      line-height: 19px;
       margin-top: 13px;
-      margin-bottom: 14px;
+      margin-bottom: 13px;
     }
 
     h2 {
@@ -146,7 +146,10 @@
       margin-top: -6px;
     }
     .topicArticle {
-      margin-bottom: 21px;
+      margin-bottom: 20px;
+    }
+    .lastMargin {
+      margin-bottom: 29px;
     }
   }
 
